change 'read' status added, modal fixed

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div id="cards">
       <!-- book cards from myLibrary arr -->
     </div>
-    <button id="addNewBook">New Book</button>
+    <button id="addNewBook">Add Book</button>
 
     <div id="modal" class="modal">
         <form action="" id="form-container">
